--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,7 +1,7 @@
 <IfModule mod_rewrite.c>
   Options -Multiviews
   RewriteEngine On
-  RewriteBase /ReviewPhpMvc/public
+  RewriteBase /ajax-mvc-exam/public
   RewriteCond %{REQUEST_FILENAME} !-d
   RewriteCond %{REQUEST_FILENAME} !-f
   RewriteRule  ^(.+)$ index.php?url=$1 [QSA,L]
